# autodev-agent

./: .gitignore  Dockerfile  README.md  README.zh.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent_factory.py  base.py  react.py  requirement.py
context/: __init__.py  engine.py
examples/: demo.py  test_react_query.py
gateway/: __init__.py  main.py
tests/: test_agents.py  test_concurrency.py  test_context.py  test_react.py  test_workflow.py
workflow/: __init__.py  engine.py
